# dc2uddf

./: .gitignore  Makefile.am  NEWS  README  README.md  aclocal.m4  compile  configure.ac  depcomp  install-sh  missing
src/: Makefile.am  dc2uddf.c  fake_uwatec_smart.c  fake_uwatec_smart.h  utils.c  utils.h
src/dif/: algos.c  dif.c  dif.h  uddf.c
src/tests/: check_dif.c
xsd/: uddf_3.1.0.xsd  uddf_3.2.3.xsd
